--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resty-app",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "private": true,
   "homepage": "https://yaljamal-401-advanced-javascript.github.io/resty/",
   "dependencies": {
