--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "resty-app",
   "version": "0.1.0",
-  "main": "src/index.js",
   "private": true,
-  "homepage": "https://yaljamal-401-advanced-javascript.github.io/resty/",
+  "main": "src/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "enzyme-adapter-react-15": "^1.4.1",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -17,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -37,10 +36,10 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "/",
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "gh-pages": "^3.1.0",
     "react-test-renderer": "^16.13.1"
   }
 }
